Uplaoding to github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactfoliobs4_akj",
-  "homepage": "https://akjfun.com",
+  "homepage": "https://akjha96.github.io/ReactifolioBs4_Akj",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
