--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "dependencies": {
     "@merc/react-timeline": "^0.1.42",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-parallax": "^3.0.3",
     "react-particles-js": "^2.7.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "3.4.0",
     "react-tilt": "^0.1.4",
-    "styled-components": "^5.0.1",
-    "typewriter-effect": "^2.12.2"
+    "styled-components": "^5.1.0",
+    "typewriter-effect": "^2.13.1"
   },
   "scripts": {
     "predeploy": "npm run build",
