Added Particles, refactored & optimised skills, added new project, fixed vunerabilities, changed class to functional  components, editted experience

--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "reactfoliobs4_akj",
   "homepage": "https://akjha96.github.io/ReactifolioBs4_Akj",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@merc/react-timeline": "^0.1.42",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "gh-pages": "^2.2.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-parallax": "^3.0.3",
     "react-particles-js": "^2.7.1",
     "react-reveal": "^1.2.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.3",
     "react-tilt": "^0.1.4",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.1",
     "typewriter-effect": "^2.13.1"
   },
   "scripts": {
